# AutoDebias

./: 1_generate_csv.sh  2_generate_jobs.py  AutoDebias.py  INSTALL.md  LICENSE  MANIFEST.in  README.md  __init__.py  cli.py  config.py  csv_generator.py  generate_images.py  inference.sh  meta.py  model_metadata.csv  pyproject.toml  readme.md  requirements.txt  run_inference.py  setup.py  train_command_line.py
detectors/: __init__.py  base.py  openai_detector.py  vlm_detector.py
evaluation/: evaluator.py
trainers/: debiaser.py
utils/: memory.py  visualization.py
